--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Font awesome CDN -->
+    <script src="https://kit.fontawesome.com/81af999e33.js" crossorigin="anonymous"></script>
+    <!-- Tailwind cSS and Daisy UI CDN -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- Tailwind customization script -->
     <script>
         tailwind.config = {
           theme: {
@@ -20,6 +24,74 @@
       </script>
 </head>
 <body>
-    
+    <!-- top Section -->
+    <section class="bg-[#F5F5F5]">
+      <!-- Navbar -->
+    <div class="navbar container mx-auto">
+      <div class="navbar-start">
+        <!-- <div class="dropdown dropdown-end">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h8m-8 6h16" />
+            </svg>
+          </div>
+          <ul
+            tabindex="0"
+            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+            <li><a>Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Blog</a></li>
+            <li><a>Contact Us</a></li>
+          </ul>
+        </div> -->
+        <div class="logo flex space-x-2">
+          <i class="fa-solid fa-arrow-right text-black rounded-full bg-[#ABEF5F] p-2 -rotate-45"></i>
+          <h1 class="text-2xl font-bold">Rinterio</h1>
+        </div>
+      </div>
+      <div class="navbar-center hidden lg:flex">
+        <ul class="menu menu-horizontal px-1">
+          <li><a class="text-base text-[#737373 hover:font-bold text-black">Home</a></li>
+          <li><a class="text-base text-[#737373] hover:font-bold text-black">Services</a></li>
+          <li><a class="text-base text-[#737373] hover:font-bold text-black">Portfolio</a></li>
+          <li><a class="text-base text-[#737373] hover:font-bold text-black">Blog</a></li>
+          <li><a class="text-base text-[#737373] hover:font-bold text-black">Contact us</a></li>
+        </ul>
+      </div>
+      <div class="navbar-end space-x-5 py-5">
+        <i class="fa-solid fa-magnifying-glass rounded-full border-2 bg-white border-gray-200 p-3 hidden md:block"></i>
+        <i class="fa-solid fa-cart-shopping rounded-full border-2 bg-white border-gray-200 p-3 hidden md:block"></i>
+        <div class="btn bg-[#ABEF5F] rounded-full hidden md:block p-2">
+          <a class="font-bold text-lg ">Book Consult</a>
+          <i class="fa-solid fa-arrow-right text-white rounded-full bg-black p-2 -rotate-45"></i>
+        </div>
+
+        <div class="dropdown dropdown-end">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden p-0">
+            <i class="fa-solid fa-bars rounded-full border-2 bg-white border-gray-200 p-3"></i>
+          </div>
+          <ul
+            tabindex="0"
+            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow items-end">
+            <li><a>Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Blog</a></li>
+            <li><a>Contact Us</a></li>
+          </ul>
+        </div>
+      </div> 
+    </div>
+     </section>
 </body>
 </html>
