--- a/index.html
+++ b/index.html
@@ -25,36 +25,11 @@
 </head>
 <body>
     <!-- top Section -->
-    <section class="bg-[#F5F5F5]">
+    <section class="bg-gradient-to-b from-[#F5F5F5] to-[#FFFFFF]">
       <!-- Navbar -->
     <div class="navbar container mx-auto">
       <div class="navbar-start">
-        <!-- <div class="dropdown dropdown-end">
-          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-5 w-5"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M4 6h16M4 12h8m-8 6h16" />
-            </svg>
-          </div>
-          <ul
-            tabindex="0"
-            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-            <li><a>Home</a></li>
-            <li><a>Services</a></li>
-            <li><a>Portfolio</a></li>
-            <li><a>Blog</a></li>
-            <li><a>Contact Us</a></li>
-          </ul>
-        </div> -->
-        <div class="logo flex space-x-2">
+                <div class="logo flex space-x-2">
           <i class="fa-solid fa-arrow-right text-black rounded-full bg-[#ABEF5F] p-2 -rotate-45"></i>
           <h1 class="text-2xl font-bold">Rinterio</h1>
         </div>
@@ -71,7 +46,7 @@
       <div class="navbar-end space-x-5 py-5">
         <i class="fa-solid fa-magnifying-glass rounded-full border-2 bg-white border-gray-200 p-3 hidden md:block"></i>
         <i class="fa-solid fa-cart-shopping rounded-full border-2 bg-white border-gray-200 p-3 hidden md:block"></i>
-        <div class="btn bg-[#ABEF5F] rounded-full hidden md:block p-2">
+        <div class="btn bg-[#ABEF5F] rounded-full hidden md:block px-5 py-2 space-x-2">
           <a class="font-bold text-lg ">Book Consult</a>
           <i class="fa-solid fa-arrow-right text-white rounded-full bg-black p-2 -rotate-45"></i>
         </div>
@@ -91,6 +66,24 @@
           </ul>
         </div>
       </div> 
+    </div>
+
+    <!-- hero Section -->
+    <div class="hero py-5">
+      <div class="hero-content text-center flex-col">
+
+        <img src="./assets/banner.png" alt="">
+        <div class="max-w-3xl">
+          <h1 class="text-5xl font-bold">A barn house of this design has a striking appearance</h1>
+          <p class="py-6">
+            The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
+          </p>
+          <div class="btn bg-[#ABEF5F80] rounded-full px-5 py-2 space-x-2">
+            <a class="font-bold text-lg ">View Details</a>
+            <i class="fa-solid fa-arrow-right text-black rounded-full bg-[#ABEF5F] p-2 -rotate-45"></i>
+          </div>
+        </div>
+      </div>
     </div>
      </section>
 </body>
