--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <img src="./assets/banner.png" alt="">
         <div class="max-w-3xl">
           <h1 class="text-5xl font-bold">A barn house of this design has a striking appearance</h1>
-          <p class="py-6">
+          <p class="py-6 text-gray-700">
             The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
           </p>
           <div class="btn bg-[#ABEF5F80] rounded-full px-5 py-2 space-x-2">
@@ -85,6 +85,55 @@
         </div>
       </div>
     </div>
-     </section>
+    </section>
+
+    <!-- second section -->
+    <section class="bg-[#F4F4F4] py-10 lg:pt-20 px-4">
+      <!-- About us -->
+       <div class="container mx-auto flex flex-col lg:flex-row justify-around items-center gap-10">
+        <!-- text content -->
+         <div class="relative space-y-5 text-center lg:text-left">
+          <img src="./assets/Vector.png" alt="" class="absolute -left-4 -top-12 hidden lg:block">
+          <div class="btn bg-white rounded-full px-5 py-2 space-x-2 ">
+            <i class="fa-solid fa-arrow-right text-black p-2"></i>
+            <a class="font-bold text-lg ">About us</a>
+          </div>
+          <h1 class="text-4xl font-bold">We design thoughtful, liveable spaces</h1>
+          <p class="text-gray-700">The barn house captivates with its blend of rustic charm and 
+            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+            <!-- cards -->
+             <div class="commercial flex items-center p-5 space-y-2 gap-5 bg-white rounded-lg text-left">
+              <div class="">
+                <img src="./assets/commercial.png" alt="">
+              </div>
+              <div class="">
+                <h1 class="text-lg font-bold">Commercial</h1>
+                <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern.</p>
+              </div>
+
+             </div>
+             <div class="commercial flex items-center p-5 space-y-2 gap-5 bg-white rounded-lg text-left">
+              <div class="">
+                <img src="./assets/residential.png" alt="">
+              </div>
+              <div class="">
+                <h1 class="text-lg font-bold">Residential</h1>
+                <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern.</p>
+              </div>
+
+             </div>
+         </div>
+
+        <!-- Image content -->
+         <div class="max-w-full rounded-lg">
+          <img src="./assets/Rectangle.png" alt="">
+         </div>
+
+       </div>
+
+
+      <!-- counter -->
+    </section> 
 </body>
 </html>
