--- a/index.html
+++ b/index.html
@@ -134,6 +134,39 @@
 
 
       <!-- counter -->
+      <div class="container mx-auto grid gap-10 grid-cols-1 sm:grid-cols-2 md:grid-cols-4 my-20 lg:my-40 text-center bg-white rounded-xl py-10">
+        <div class="flex flex-col space-y-5">
+          <i class="fa-regular fa-message text-5xl" style="color: #737373"></i>
+          <h1 class="text-5xl font-bold mx-auto">
+            235+
+          </h1>
+          <p class="text-gray-700">Happy Client Review</p>
+        </div>
+        <div class="flex flex-col space-y-5">
+          <i class="fa-regular fa-building text-5xl" style="color: #737373"></i>
+          <h1 class="text-5xl font-bold mx-auto">
+            50+
+          </h1>
+          <p class="text-gray-700">Work Departments</p>
+        </div>
+        <div class="flex flex-col space-y-5">
+          <i class="fa-solid fa-users text-5xl" style="color: #737373"></i>
+          <h1 class="text-5xl font-bold mx-auto">
+            30k+
+          </h1>
+          <p class="text-gray-700">Our Happy Clients</p>
+        </div>
+        <div class="flex flex-col space-y-5">
+          <i class="fa-solid fa-user-group text-5xl" style="color: #737373"></i>
+          <h1 class="text-5xl font-bold mx-auto">
+            307+
+          </h1>
+          <p class="text-gray-700">Staff Members</p>
+        </div>
+      </div>
+
+
+      <!-- ho -->
     </section> 
 </body>
 </html>
