--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <i class="fa-solid fa-arrow-right text-black p-2"></i>
             <a class="font-bold text-lg ">About us</a>
           </div>
-          <h1 class="text-4xl font-bold">We design thoughtful, liveable spaces</h1>
+          <h1 class="text-5xl font-bold">We design thoughtful, liveable spaces</h1>
           <p class="text-gray-700">The barn house captivates with its blend of rustic charm and 
             modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
@@ -166,7 +166,41 @@
       </div>
 
 
-      <!-- ho -->
+      <!-- how we works -->
+      <div class="container mx-auto text-center space-y-5">
+        <!-- title content -->
+          <div class="btn bg-white rounded-full px-5 py-2 space-x-2 ">
+            <i class="fa-solid fa-arrow-right text-black p-2"></i>
+            <a class="font-bold text-lg ">How we works</a>
+          </div>
+          <h1 class="text-5xl font-bold">Our Works Process</h1>
+          <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+          <!-- cards -->
+          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-10 pt-10">
+            <div class="box1 text-left p-5 space-y-5 bg-[#E7C1D3] rounded-lg">
+              <i class="fa-regular fa-lightbulb text-4xl"></i>
+              <h1 class="text-3xl font-bold">Concept</h1>
+              <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="box2 text-left p-5 space-y-5 bg-[#EFDA6E] rounded-lg">
+              <i class="fa-solid fa-diagram-project text-4xl"></i>
+              <h1 class="text-3xl font-bold">Design Process</h1>
+              <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="box3 text-left p-5 space-y-5 bg-[#A4DAC3] rounded-lg">
+              <i class="fa-regular fa-eye text-4xl"></i>
+              <h1 class="text-3xl font-bold">Supervision</h1>
+              <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="box4 text-left p-5 space-y-5 bg-[#77AAEA] rounded-lg">
+              <i class="fa-solid fa-file-invoice-dollar text-4xl"></i>
+              <h1 class="text-3xl font-bold">Concept</h1>
+              <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+          </div>
+          
+       </div>
     </section> 
 </body>
 </html>
