--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
       </script>
 </head>
-<body>
+<body class="bg-[#F4F4F4]">
     <!-- top Section -->
     <section class="bg-gradient-to-b from-[#F5F5F5] to-[#FFFFFF]">
       <!-- Navbar -->
@@ -94,7 +94,7 @@
         <!-- text content -->
          <div class="relative space-y-5 text-center lg:text-left">
           <img src="./assets/Vector.png" alt="" class="absolute -left-4 -top-12 hidden lg:block">
-          <div class="btn bg-white rounded-full px-5 py-2 space-x-2 ">
+          <div class="inline bg-white rounded-full px-5 py-2 space-x-2 ">
             <i class="fa-solid fa-arrow-right text-black p-2"></i>
             <a class="font-bold text-lg ">About us</a>
           </div>
@@ -169,7 +169,7 @@
       <!-- how we works -->
       <div class="container mx-auto text-center space-y-5">
         <!-- title content -->
-          <div class="btn bg-white rounded-full px-5 py-2 space-x-2 ">
+          <div class="inline bg-white rounded-full px-5 py-2 space-x-2 ">
             <i class="fa-solid fa-arrow-right text-black p-2"></i>
             <a class="font-bold text-lg ">How we works</a>
           </div>
@@ -199,8 +199,62 @@
               <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
           </div>
-          
        </div>
     </section> 
+
+    <!-- Our latest portfolio -->
+     <section class="container mx-auto text-center space-y-5 py-20 px-5">
+        <!-- title content -->
+        <div class="inline bg-[#ABEF5F80] rounded-full px-5 py-2 space-x-2 ">
+          <i class="fa-solid fa-arrow-right text-black p-2"></i>
+          <a class="font-bold text-lg ">Explore our latest works</a>
+        </div>
+        <h1 class="text-5xl font-bold">Our Latest Portfolio</h1>
+        <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+        <!-- grid 1 -->
+         <div class="flex flex-col sm:grid grid-cols-1 sm:grid-cols-2 grid-rows-4 lg:grid-rows-2 gap-5 lg:grid-cols-9 text-left">
+          <div class="box1 order-1 flex flex-col sm:flex-row gap-5 col-span-1 sm:col-span-2 lg:col-span-6 p-5 rounded-lg border-[1px] border-gray-300">
+            <img src="./assets/img1.png" alt="" class="h-full">
+            <div class="text space-y-5 gap-5">
+              <h1 class="text-3xl font-bold">Commercial</h1>
+              <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              <div class="mt-5 space-x-2">
+                <button class="text-xl font-bold">View Details</button>
+                <i class="fa-solid fa-arrow-right text-black bg-[#ABEF5F] rounded-full p-2"></i>
+              </div>
+            </div>           
+          </div>
+
+          <div class="box2 order-2 p-5 col-span-1 lg:col-span-3 rounded-lg border-[1px] border-gray-300">
+            <img src="./assets/img2.png" alt="" class="w-full h-full">
+          </div>
+
+          <div class="box3 order-5 lg:order-3 p-5 col-span-1 lg:col-span-2 rounded-lg border-[1px] border-gray-300">
+            <img src="./assets/img3.png" alt="" class="w-full h-full">
+          </div>
+
+          <div class="box4 order-4 flex flex-col sm:flex-row gap-5 col-span-2 lg:col-span-5 p-5 rounded-lg border-[1px] border-gray-300">
+            <img src="./assets/img4.png" alt="" class="">
+            <div class="text space-y-5 gap-5">
+              <h1 class="text-3xl font-bold">Commercial</h1>
+              <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              <div class="mt-5 space-x-2">
+                <button class="text-xl font-bold">View Details</button>
+                <i class="fa-solid fa-arrow-right text-black bg-[#ABEF5F] rounded-full p-2"></i>
+              </div>
+            </div>           
+          </div>
+
+          <div class="box5 p-5 order-3 lg:order-5 col-span-1 lg:col-span-2 rounded-lg border-[1px] border-gray-300">
+            <img src="./assets/img5.png" alt="" class="w-full h-full">
+          </div>
+
+          <div class="box5 order-6 p-5 block lg:hidden col-span-1 lg:col-span-2 rounded-lg border-[1px] border-gray-300">
+            <img src="./assets/img5.png" alt="" class="w-full h-full">
+          </div>
+
+         </div>
+     </section>
 </body>
 </html>
