--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <section class="bg-gradient-to-b from-[#F5F5F5] to-[#FFFFFF]">
       <!-- Navbar -->
     <div class="navbar container mx-auto">
-      <div class="navbar-start">
-                <div class="logo flex space-x-2">
-          <i class="fa-solid fa-arrow-right text-black rounded-full bg-[#ABEF5F] p-2 -rotate-45"></i>
-          <h1 class="text-2xl font-bold">Rinterio</h1>
-        </div>
+        <a href="./index.html">
+          <div class="navbar-start">
+            <div class="logo flex justify-center space-x-2">
+            <i class="fa-solid fa-arrow-right text-black rounded-full bg-[#ABEF5F] p-3 -rotate-45"></i>
+            <h1 class="text-3xl font-bold">Rinterio</h1>
+          </div>
+        </a>
       </div>
       <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
@@ -32,8 +34,8 @@
         </ul>
       </div>
       <div class="navbar-end space-x-5 py-5">
-        <i class="fa-solid fa-magnifying-glass rounded-full border-2 bg-white border-gray-200 p-3 hidden md:block"></i>
-        <i class="fa-solid fa-cart-shopping rounded-full border-2 bg-white border-gray-200 p-3 hidden md:block"></i>
+        <a href="#"><i class="fa-solid fa-magnifying-glass rounded-full border-2 bg-white border-gray-200 p-3 hidden md:block"></i></a>
+        <a href="#"><i class="fa-solid fa-cart-shopping rounded-full border-2 bg-white border-gray-200 p-3 hidden md:block"></i></a>
         <div class="btn bg-[#ABEF5F] rounded-full hidden md:block px-5 py-2 space-x-2">
           <a class="font-bold text-lg ">Book Consult</a>
           <i class="fa-solid fa-arrow-right text-white rounded-full bg-black p-2 -rotate-45"></i>
@@ -249,7 +251,7 @@
 
     
      <!-- News and Articles -->
-     <section class="py-20">
+     <section class="py-20 px-5">
       <div class="container mx-auto text-center space-y-5 px-5">
         <!-- title content -->
         <div class="inline bg-[#ABEF5F80] rounded-full px-5 py-2 space-x-2 ">
@@ -354,14 +356,51 @@
          </form>
       </div>
       </section>
+
+      <!-- faq -->
+       <section class="container text-center mx-auto py-20 px-5 space-y-5">
+
+        <!-- title content -->
+        <div class="inline bg-[#ABEF5F80] rounded-full px-5 py-2 space-x-2 ">
+          <i class="fa-solid fa-arrow-right text-black p-2"></i>
+          <a class="font-bold text-lg ">faq's</a>
+        </div>
+        <h1 class="text-5xl font-bold">Frequently Asked Questions</h1>
+        <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        
+        <!-- faq's -->
+        <div class="collapse collapse-arrow text-left bg-white">
+          <input type="radio" name="my-accordion-2" checked="checked" />
+          <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+          <div class="collapse-content">
+            <p>hello</p>
+          </div>
+        </div>
+        <div class="collapse collapse-arrow text-left bg-white">
+          <input type="radio" name="my-accordion-2" />
+          <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+          <div class="collapse-content">
+            <p>hello</p>
+          </div>
+        </div>
+        <div class="collapse collapse-arrow text-left bg-white">
+          <input type="radio" name="my-accordion-2" />
+          <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+          <div class="collapse-content">
+            <p>hello</p>
+          </div>
+        </div>
+       </section>
 </body>
 
 <!-- footer -->
 <footer class="footer footer-center bg-[#1C1C1C] text-white rounded py-20 border-b-8 border-white ">
-  <div class="logo flex items-center space-x-1">
-    <i class=" fa-solid fa-arrow-right text-black rounded-full bg-[#ABEF5F] p-3 -rotate-45"></i>
-    <h1 class="text-5xl font-bold">Rinterio</h1>
-  </div>
+  <a href="./index.html">
+    <div class="logo flex items-center space-x-1">
+      <i class=" fa-solid fa-arrow-right text-black rounded-full bg-[#ABEF5F] p-3 -rotate-45"></i>
+      <h1 class="text-5xl font-bold">Rinterio</h1>
+    </div>
+  </a>
   <p class="text-gray-400">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
   <nav class="grid grid-col-1 md:grid-flow-col items-center gap-10">
