--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           <!-- cards -->
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-10 pt-10">
             <div class="box1 p-5 space-y-5 rounded-lg shadow-lg">
-              <img src="/assets/team1.jpg" alt="" class="rounded-full w-1/2 mx-auto">
+              <img src="./assets/team1.jpg" alt="" class="rounded-full w-1/2 mx-auto">
               <h1 class="text-3xl font-bold">Robert jr</h1>
               <p class="text-gray-700">Managing Director and CEO</p>
               <div class="mt-5 space-x-2 bg-[#ABEF5F] hover:bg-[#ABEF5F80] rounded-full py-2 w-3/4 mx-auto">
@@ -366,7 +366,7 @@
               </div>
             </div>
             <div class="box2 p-5 space-y-5 rounded-lg shadow-lg">
-              <img src="/assets/team2.jpg" alt="" class="rounded-full w-1/2 mx-auto">
+              <img src="./assets/team2.jpg" alt="" class="rounded-full w-1/2 mx-auto">
               <h1 class="text-3xl font-bold">Sara</h1>
               <p class="text-gray-700">Creative and Digital Designer</p>
               <div class="mt-5 space-x-2 bg-[#ABEF5F] hover:bg-[#ABEF5F80] rounded-full py-2 w-3/4 mx-auto">
@@ -375,7 +375,7 @@
               </div>
             </div>
             <div class="box3 p-5 space-y-5 rounded-lg shadow-lg">
-              <img src="/assets/team3.jpg" alt="" class="rounded-full w-1/2 mx-auto">
+              <img src="./assets/team3.jpg" alt="" class="rounded-full w-1/2 mx-auto">
               <h1 class="text-3xl font-bold">Chris</h1>
               <p class="text-gray-700">Sales Manager</p>
               <div class="mt-5 space-x-2 bg-[#ABEF5F] hover:bg-[#ABEF5F80] rounded-full py-2 w-3/4 mx-auto">
@@ -384,7 +384,7 @@
               </div>
             </div>
             <div class="box1 p-5 space-y-5 rounded-lg shadow-lg">
-              <img src="/assets/team4.jpg" alt="" class="rounded-full w-1/2 mx-auto">
+              <img src="./assets/team4.jpg" alt="" class="rounded-full w-1/2 mx-auto">
               <h1 class="text-3xl font-bold">Leena</h1>
               <p class="text-gray-700">Interior Designer</p>
               <div class="mt-5 space-x-2 bg-[#ABEF5F] hover:bg-[#ABEF5F80] rounded-full py-2 w-3/4 mx-auto">
