--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     </section>
 
     <!-- second section -->
-    <section class="bg-[#F4F4F4] py-10 lg:pt-32 lg:pb-20 px-4">
+    <section class="bg-[#F4F4F4] py-10 lg:py-20 lg:pt-32 px-4">
       <!-- About us -->
-       <div class="container mx-auto flex flex-col lg:flex-row justify-around items-center gap-10 pb-20">
+       <div class="container mx-auto flex flex-col lg:flex-row justify-around items-center gap-10 pb-20 lg:pb-40">
         <!-- text content -->
          <div class="relative space-y-5 text-center lg:text-left w-full lg:w-3/4">
           <img src="./assets/Vector.png" alt="" class="absolute -left-4 -top-16 hidden lg:block">
@@ -142,7 +142,7 @@
 
 
       <!-- counter -->
-      <div class="container mx-auto grid gap-10 grid-cols-1 sm:grid-cols-2 md:grid-cols-4 my-20 lg:my-20 text-center bg-white rounded-xl py-10">
+      <div class="container mx-auto grid gap-10 grid-cols-1 sm:grid-cols-2 md:grid-cols-4 text-center bg-white rounded-xl py-10">
         <div class="flex flex-col space-y-5">
           <i class="fa-regular fa-message text-5xl" style="color: #737373"></i>
           <h1 class="text-3xl md:text-5xl font-bold mx-auto">
@@ -175,7 +175,7 @@
 
 
       <!-- how we works -->
-      <div class="container mx-auto text-center space-y-5 pt-20">
+      <div class="container mx-auto text-center space-y-5 pt-20 lg:pt-40">
         <!-- title content -->
           <div class="inline bg-white rounded-full px-5 py-2 space-x-2 ">
             <i class="fa-solid fa-arrow-right text-black p-2"></i>
@@ -212,7 +212,7 @@
 
     <!-- Our latest portfolio -->
      <section class="bg-white">
-      <div class="container mx-auto text-center space-y-5 py-20 px-5">
+      <div class="container mx-auto text-center space-y-5 py-10 lg:py-20 px-5">
         <!-- title content -->
         <div class="inline bg-[#ABEF5F80] rounded-full px-5 py-2 space-x-2 ">
           <i class="fa-solid fa-arrow-right text-black p-2"></i>
@@ -269,7 +269,7 @@
 
     
      <!-- News and Articles -->
-     <section class="py-20 px-5">
+     <section class="py-10 lg:py-20 px-5">
       <div class="container mx-auto text-center space-y-5">
         <!-- title content -->
         <div class="inline bg-[#ABEF5F80] rounded-full px-5 py-2 space-x-2 ">
@@ -344,7 +344,7 @@
      </section>
 
      <!-- Meet our team -->
-      <section class="bg-white py-20 px-5">
+      <section class="bg-white py-10 lg:py-20 px-5">
         <div class="container mx-auto text-center space-y-5">
           <!-- title content -->
           <div class="inline bg-[#ABEF5F80] rounded-full px-5 py-2 space-x-2 ">
@@ -397,7 +397,7 @@
       </section>
 
      <!-- connect -->
-      <section class="py-20 bg-[url('./assets/bg.jpg')] bg-cover bg-no-repeat bg-center border-8 border-white">
+      <section class="py-10 lg:py-20 bg-[url('./assets/bg.jpg')] bg-cover bg-no-repeat bg-center border-8 border-white">
         <div class="max-w-screen-md mx-auto text-center space-y-5 px-5">
 
           <!-- title content -->
@@ -428,7 +428,7 @@
       </section>
 
       <!-- faq -->
-       <section class="container text-center mx-auto py-20 px-5 space-y-5">
+       <section class="container text-center mx-auto py-10 lg:py-20 px-5 space-y-5">
 
         <!-- title content -->
         <div class="inline bg-[#ABEF5F80] rounded-full px-5 py-2 space-x-2 ">
@@ -478,7 +478,7 @@
 </body>
 
 <!-- footer -->
-<footer class="footer footer-center bg-[#1C1C1C] text-white rounded py-20 border-b-8 border-white px-5">
+<footer class="footer footer-center bg-[#1C1C1C] text-white rounded py-10 lg:py-20 border-b-8 border-white px-5">
   <a href="./index.html">
     <div class="logo flex items-center space-x-1">
       <i class=" fa-solid fa-arrow-right text-black rounded-full bg-[#ABEF5F] p-3 -rotate-45"></i>
